# cacao-plugins

./: .clang-format  README.md  auto_gain_workaround.txt  compile_kalao.sh
KalAO_BMC/: CMakeLists.txt  KalAO_BMC.c  KalAO_BMC.h  display.c  display.h  fpslist.txt
KalAO_Config/: CMakeLists.txt  KalAO_Config.c  KalAO_Config.h  dynconfig.c  dynconfig.h
KalAO_Nuvu/: CMakeLists.txt  KalAO_Nuvu.c  KalAO_Nuvu.h  acquire.c  acquire_camstack.c  acquire_camstack.h  fpslist.txt
KalAO_SHWFS/: CMakeLists.txt  KalAO_SHWFS.c  KalAO_SHWFS.h  fpslist.txt  process.c  process.h
KalAO_Telemetry/: CMakeLists.txt  KalAO_Telemetry.c  KalAO_Telemetry.h  gather.c  gather.h
